// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageUiComponent <ButtonUi /> renders correctly 1`] = `
<DocumentFragment>
  .c11 {
  margin-bottom: 2rem;
}

.c10 {
  margin-bottom: 2rem;
}

.c6 {
  margin-bottom: 2rem;
}

.c7 {
  margin-bottom: 2rem;
}

.c9 {
  margin-bottom: 2rem;
}

.c4 {
  margin-bottom: 2rem;
}

.c5 {
  margin-bottom: 2rem;
}

.c3 {
  margin-bottom: 2rem;
}

.c2 {
  margin-bottom: 2rem;
}

.c8 {
  margin-bottom: 2rem;
}

.c13 {
  z-index: 10;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(1,minmax(0,1fr));
  gap: 2rem;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

.c12 {
  grid-column: span 1 / span 1;
  display: none;
}

@media (min-width:1280px) {
  .c0 {
    grid-template-columns: repeat(5,minmax(0,1fr));
  }
}

@media (min-width:1280px) {
  .c1 {
    grid-column: span 4 / span 4;
  }
}

@media (min-width:1280px) {
  .c12 {
    display: block;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        Title
      </div>
      <div
        class="c2"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c3"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c4"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c5"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c6"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c7"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c8"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c9"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c10"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c11"
      >
        <div>
          Title
        </div>
        <table>
          <thead>
            <tr>
              <th>
                1
              </th>
              <th>
                2
              </th>
              <th>
                3
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                x
              </td>
              <td>
                y
              </td>
              <td>
                z
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c13"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageUiComponent <ButtonUi /> renders with scrolled 1`] = `
<DocumentFragment>
  .c11 {
  margin-bottom: 2rem;
}

.c10 {
  margin-bottom: 2rem;
}

.c6 {
  margin-bottom: 2rem;
}

.c7 {
  margin-bottom: 2rem;
}

.c9 {
  margin-bottom: 2rem;
}

.c4 {
  margin-bottom: 2rem;
}

.c5 {
  margin-bottom: 2rem;
}

.c3 {
  margin-bottom: 2rem;
}

.c2 {
  margin-bottom: 2rem;
}

.c8 {
  margin-bottom: 2rem;
}

.c13 {
  z-index: 10;
  position: fixed;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(1,minmax(0,1fr));
  gap: 2rem;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

.c12 {
  grid-column: span 1 / span 1;
  display: none;
}

@media (min-width:1280px) {
  .c0 {
    grid-template-columns: repeat(5,minmax(0,1fr));
  }
}

@media (min-width:1280px) {
  .c1 {
    grid-column: span 4 / span 4;
  }
}

@media (min-width:1280px) {
  .c12 {
    display: block;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div>
        Title
      </div>
      <div
        class="c2"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c3"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c4"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c5"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c6"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c7"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c8"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c9"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c10"
      >
        <div>
          Title
        </div>
        <div />
      </div>
      <div
        class="c11"
      >
        <div>
          Title
        </div>
        <table>
          <thead>
            <tr>
              <th>
                1
              </th>
              <th>
                2
              </th>
              <th>
                3
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                x
              </td>
              <td>
                y
              </td>
              <td>
                z
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c13"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
